fix title spacing

--- a/src/assets/css/StartScreen.css
+++ b/src/assets/css/StartScreen.css
@@ -44,8 +44,8 @@
 #lehis {
     font-family: 'Lobster';
     position: absolute;
-    top: -20px;
-    left: 80px;
+    top: -15px;
+    left: 110px;
 }
 
 #title {
